# sorrow-rs

./: Cargo.toml  LICENSE-MIT  Trunk.toml  index.html  tailwind.config.js
crates/core/: Cargo.toml
crates/core/src/: communication.rs  lib.rs  reactive.rs  timers.rs
crates/core/src/communication/: mod.rs  table.rs  transport.rs
crates/core/src/state/: buildings.rs  calendar.rs  mod.rs  options.rs  precision.rs  recipes.rs  resource.rs  resources.rs  time.rs  ui.rs
crates/core/src/time/: mod.rs
crates/core/src/timers/: delta.rs  mod.rs  span.rs  ticker.rs  unit.rs
crates/core/src/utils/: cell.rs  channel.rs  mod.rs  shared.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs  reactive.rs
crates/derive/tests/: test.rs
crates/derive/tests/reactive/fail/: 01-enum.rs  01-enum.stderr  02-union.rs  02-union.stderr  03-empty-struct.rs  03-empty-struct.stderr  04-generic-struct.rs  04-generic-struct.stderr  05-complex-field-type.rs  05-complex-field-type.stderr  06-attr-without-nested.rs  06-attr-without-nested.stderr  06-non-copy-struct.rs  06-non-copy-struct.stderr  07-attr-with-unknown-param.rs  07-attr-with-unknown-param.stderr  07-attr-without-nested.stderr  08-attr-with-unknown-param.stderr  08-non-reactive-nested.stderr  09-non-reactive-nested.rs  09-non-reactive-nested.stderr  09-use-reserved-ident.rs  09-use-reserved-ident.stderr  10-non-clone-nested-struct.rs  10-non-clone-nested-struct.stderr
crates/derive/tests/reactive/pass/: 01-has-reactivity.rs  02-inner-reactivity.rs  03-pub-struct.rs  03-struct-from-other-module.rs
crates/engine/: Cargo.toml
crates/engine/src/: calendar.rs  dispatcher.rs  endpoint.rs  index.rs  lib.rs  resources.rs  rpc.rs  runner.rs  schedules.rs  simulation.rs  work_orders.rs  worker.rs  world.rs
crates/engine/src/index/: mod.rs
crates/engine/src/io/: change_buffer.rs  intent_resolver.rs  mod.rs  worker.rs
crates/engine/src/resources/: mod.rs
crates/engine/src/rpc/: mod.rs  worker.rs
crates/engine/src/simulation/: buildings.rs  calendar.rs  fulfillment.rs  mod.rs  resources.rs  ticker.rs  work_orders.rs
crates/engine/src/simulation/work_orders/: logic.rs  mod.rs
crates/engine/src/ui/: mod.rs  visibility.rs
crates/engine/src/work_orders/: mod.rs
crates/reactive/: Cargo.toml
crates/reactive/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/locales/: en.json
crates/ui/src/: app.rs  conditional.rs  events.rs  formatter.rs  layout.rs  lib.rs  number_view.rs  state.rs
crates/ui/src/components/: mod.rs  numbers.rs  strings.rs  tooltip.rs
crates/ui/src/endpoint/: mod.rs
crates/ui/src/layout/: controls.rs  environment.rs  mod.rs  resources.rs
crates/ui/src/state/: mod.rs
crates/ui/src/store/: mod.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
crates/worker/src/actor/: registrar.rs  scope.rs  spawner.rs  traits.rs
src/: lib.rs  main.rs
src/core/: communication.rs  mod.rs  timers.rs
src/core/utils/: channel.rs  delta_time.rs  mod.rs
src/engine/: controller.rs  dispatcher.rs  endpoint.rs  mod.rs  runtime.rs  worker.rs  world.rs
src/interface/: footer.rs  header.rs  keyboard_events.rs  main.rs  mod.rs
src/ui/: app.rs  events.rs  keyboard_events.rs  layout.rs  mod.rs  state.rs
styles/: all.scss  button.scss  container.scss  list.scss  main.scss  mixins.scss  tailwind.css
