[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["shoftee"]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[package]
name = "sorrow-rs"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "engine"
path = "src/bin/engine.rs"

[[bin]]
name = "ui"
path = "src/bin/ui.rs"

[dependencies]
sorrow-core = { path = "crates/core" }
sorrow-derive = { path = "crates/derive" }
sorrow-engine = { path = "crates/engine" }
sorrow-ui = { path = "crates/ui" }
console_error_panic_hook = "0.1"
