[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["shoftee"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[package]
name = "sorrow-rs"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[workspace.dependencies]
sorrow-core = { path = "crates/core" }
sorrow-engine = { path = "crates/engine" }
sorrow-ui = { path = "crates/ui" }
sorrow-worker = { path = "crates/worker" }

ahash = "0.8"
console_error_panic_hook = "0.1"
itertools = "0.14.0"
send_wrapper = "0.6"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
wasm-bindgen = "0.2"
tracing = "0.1"

[dependencies]
sorrow-engine.workspace = true
sorrow-ui.workspace = true

console_error_panic_hook.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "engine"
path = "src/bin/engine.rs"

[[bin]]
name = "ui"
path = "src/bin/ui.rs"
