[package]
name = "sorrow-core"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true

time = { version = "0.3", features = ["wasm-bindgen"] }
partially = { version = "0.2", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
ahash = "0.8"
