[package]
name = "sorrow-derive"
authors = ["shoftee"]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
proc_macro = true
name = "sorrow_derive"

[dependencies]
sorrow-reactive = { path = "../reactive" }
proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = { version = "2.0.16", features = ["extra-traits", "parsing"] }
proc-macro2-diagnostics = "0.10.0"
proc-macro-crate = "1.3.1"

[dev-dependencies]
trybuild = "1.0.80"
