[package]
name = "sorrow-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true
name = "sorrow_derive"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "parsing"] }
proc-macro2-diagnostics = "0.10"
proc-macro-crate = "3.2"

[dev-dependencies]
trybuild = "1.0"
sorrow-core = { path = "../../crates/core" }
