[package]
name = "sorrow-engine"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sorrow_engine"
path = "src/lib.rs"

[dependencies]
sorrow-core = { path = "../../crates/core" }
sorrow-derive = { path = "../../crates/derive" }
gloo-worker = "0.5"
gloo-timers = "0.3"
wasm-bindgen = "0.2"