[package]
name = "sorrow-engine"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sorrow_engine"
path = "src/lib.rs"

[dependencies]
sorrow-core.workspace = true
sorrow-worker.workspace = true
wasm-bindgen.workspace = true
send_wrapper.workspace = true
tracing.workspace = true

bevy = { version = "0.15", default-features = false }
web-sys = { version = "0.3", default-features = false }
strum = { version = "0.26" }
