[package]
name = "sorrow-ui"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sorrow_ui"
path = "src/lib.rs"

[dependencies]
sorrow-core.workspace = true
sorrow-engine.workspace = true
tracing.workspace = true

leptos.workspace = true
wasm-bindgen.workspace = true

leptos_meta = "0.7"
tracing-wasm = "0.2"
