[package]
name = "sorrow-ui"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sorrow_ui"
path = "src/lib.rs"

[dependencies]
sorrow-core.workspace = true
sorrow-engine.workspace = true

ahash.workspace = true
send_wrapper.workspace = true
tracing.workspace = true
wasm-bindgen.workspace = true

leptos = { version = "0.7", features = ["csr"] }
leptos_meta = "0.7"
tracing-wasm = "0.2"
reactive_stores = "0.1"
